Added notification dot and local storage to select menu

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     </g>
                 </g>
                 </svg>
+                <div class='dot-container'>
+                    
+                </div>                
                 <div class='drop-options drop-hide'>
                     <p>This is a cool notification!</p>
                     <p>Hey! Another one!</p>
